Refactored post endpoints and its DTOs
Changelog:
- Removed some Post DTOs and created anothers
- Created PostMapper to map from Post entity to DTO
- Refactored methods in post service and endpoints in post controller